RESOLVED FIXED165011
Fix exception scope verification failures in FunctionConstructor.cpp.
https://bugs.webkit.org/show_bug.cgi?id=165011
Summary Fix exception scope verification failures in FunctionConstructor.cpp.
Mark Lam
Reported 2016-11-21 13:39:53 PST
Patch coming.
Attachments
proposed patch. (2.03 KB, patch)
2016-11-21 14:57 PST, Mark Lam
no flags
Mark Lam
Comment 1 2016-11-21 14:57:53 PST
Created attachment 295314 [details] proposed patch.
Mark Lam
Comment 2 2016-11-21 17:41:25 PST
Comment on attachment 295314 [details] proposed patch. Thanks for the review.
WebKit Commit Bot
Comment 3 2016-11-21 18:05:37 PST
Comment on attachment 295314 [details] proposed patch. Clearing flags on attachment: 295314 Committed r208956: <http://trac.webkit.org/changeset/208956>
WebKit Commit Bot
Comment 4 2016-11-21 18:05:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.