Fix exception scope verification failures in FunctionConstructor.cpp. https://bugs.webkit.org/show_bug.cgi?id=165011

Reviewed by Saam Barati.

* runtime/FunctionConstructor.cpp:
(JSC::constructFunction):
(JSC::constructFunctionSkippingEvalEnabledCheck):


Canonical link: https://commits.webkit.org/182664@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208956 268f45cc-cd09-0410-ab3c-d52691b4dbfc